<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<include
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>-->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/screen_background"
            android:fitsSystemWindows="true"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/setting_normal" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/content_background"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_change_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/change_password"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/change_password"/>


                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/ll_find_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/find_password"/>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/find_password"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_cache" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_cache" />

                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/cb_setting_cache"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/button_theme" />
                    </LinearLayout>

                    <include layout="@layout/item_line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_image" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_image" />

                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/cb_setting_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/button_theme" />
                    </LinearLayout>

                    <include layout="@layout/item_line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_night" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_night" />

                        <android.support.v7.widget.AppCompatCheckBox
                            android:id="@+id/cb_setting_night"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/button_theme" />
                    </LinearLayout>

                    <include layout="@layout/item_line" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/setting_ui" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/content_background"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/ll_recycle_anim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_cache" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_recycleview" />


                    </LinearLayout>

                    <include layout="@layout/item_line" />

                    <LinearLayout
                        android:id="@+id/ll_recycle_down"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_cache" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="我的下载" />


                    </LinearLayout>

                    <include layout="@layout/item_line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingBottom="12dp"
                        android:paddingLeft="12dp"
                        android:paddingTop="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_image" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_recycleview_head" />

                        <com.kyleduo.switchbutton.SwitchButton
                            android:id="@+id/switch_anim"
                            style="@style/SwitchButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/button_theme"
                            android:textColor="#FFFFFF"
                            app:kswTextOff="Off"
                            app:kswTextOn="On" />


                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/setting_other" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/content_background"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_setting_feedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_feedback" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_feedback" />
                    </LinearLayout>

                    <include layout="@layout/item_line" />

                    <LinearLayout
                        android:id="@+id/ll_setting_clear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_clear" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_clear" />

                        <TextView
                            android:id="@+id/tv_setting_clear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="缓存大小　200kb" />
                    </LinearLayout>

                    <include layout="@layout/item_line" />

                    <LinearLayout
                        android:id="@+id/ll_setting_update"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="@dimen/button_size_4"
                            android:layout_height="@dimen/button_size_4"
                            android:src="@mipmap/ic_update" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_weight="1"
                            android:text="@string/setting_update" />

                        <TextView
                            android:id="@+id/tv_setting_update"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="当前版本号　v1.0" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
